# cubiquity

./: .cproject  .project  CMakeLists.txt  Cubiquity.sln  GameplayPolyVox-ios.plist  GameplayPolyVox-macosx.plist  GameplayPolyVox.vcxproj  GameplayPolyVox.vcxproj.filters  INSTALL.txt  README.rst  TODO.txt  bar-descriptor.xml  c_flag_overrides.cmake  cxx_flag_overrides.cmake  game.config
Bridges/gameplay/: ExtraNodeData.cpp  ExtraNodeData.h  GameplayColouredCubesVolume.cpp  GameplayColouredCubesVolume.h  GameplayRaycasting.cpp  GameplayRaycasting.h  GameplaySmoothTerrainVolume.cpp  GameplaySmoothTerrainVolume.h  GameplaySmoothTerrainVolumeEditor.cpp  GameplaySmoothTerrainVolumeEditor.h
ConvertToImageSlices/: CMakeLists.txt  ConvertToImageSlices.vcxproj  main.cpp  main.h
ConvertToVDB/: CMakeLists.txt  CmdOption.h  ConvertToVDB.vcxproj  ImportImageSlices.cpp  ImportImageSlices.h  ImportMagicaVoxel.cpp  ImportMagicaVoxel.h  ImportVXL.cpp  MagicaVoxelModel.h  main.cpp  main.h
Core/: BackgroundTaskProcessor.cpp  BackgroundTaskProcessor.h  BitField.h  Brush.cpp  Brush.h  CMakeLists.txt  Clock.cpp  Clock.h  Color.cpp  Color.h  ColoredCubesVolume.cpp  ColoredCubesVolume.h  ColoredCubicSurfaceExtractionTask.cpp  ColoredCubicSurfaceExtractionTask.h  Colour.cpp  Colour.h  ColouredCubesIsQuadNeeded.h  ColouredCubesVolume.cpp  ColouredCubesVolume.h  ColouredCubicSurfaceExtractionTask.cpp  ColouredCubicSurfaceExtractionTask.h  ConcurrentQueue.h  CubicSurfaceExtractionTask.h  CubicSurfaceExtractionTask.inl  Cubiquity.h  Cubiquity.sln  Cubiquity.vcxproj  Cubiquity.vcxproj.filters  CubiquityC.cpp  CubiquityC.h  CubiquityForwardDeclarations.h  CubiquityUtility.cpp  CubiquityUtility.h  Exceptions.h  FileSystem.cpp  FileSystem.h  Logging.cpp  Logging.h  MainThreadTaskProcessor.cpp  MainThreadTaskProcessor.h  (+49 more)
Core/Dependancies/SQLite/: LICENSE.txt
CubiquityForGameplay/Bridge/: GameplayBridge.doxyfile  GameplayColoredCubesVolume.cpp  GameplayColoredCubesVolume.h  GameplayColouredCubesVolume.cpp  GameplayColouredCubesVolume.h  GameplayRaycasting.cpp  GameplayRaycasting.h  GameplaySmoothTerrainVolume.cpp  GameplaySmoothTerrainVolume.h  GameplaySmoothTerrainVolumeEditor.cpp  GameplaySmoothTerrainVolumeEditor.h  GameplayTerrainVolume.cpp  GameplayTerrainVolume.h  GameplayTerrainVolumeEditor.cpp  GameplayTerrainVolumeEditor.h  GameplayVolumeSerialisation.h
CubiquityForGameplay/CPlusPlus/: .cproject  .project  CMakeLists.txt  CPlusPlus-ios.plist  CPlusPlus-macosx.plist  CPlusPlus.vcxproj  CPlusPlus.vcxproj.filters  bar-descriptor.xml  game.config
CubiquityForGameplay/Lua/: .cproject  .project  CMakeLists.txt  Lua-ios.plist  Lua-macosx.plist  Lua.vcxproj  Lua.vcxproj.filters  bar-descriptor.xml  game.config
Data/MagicaVoxel/: Readme.txt
Examples/CubiquityCTest/: CMakeLists.txt  CubiquityCTest.cpp  CubiquityCTest.vcxproj  CubiquityCTest.vcxproj.filters  ReadMe.txt
Examples/OpenGL/: CMakeLists.txt  ColoredCubesFragmentShader.glsl  ColoredCubesVertexShader.glsl  FragmentShader.glsl  TerrainFragmentShader.glsl  TextureFragmentShader.fragmentshader  VertexShader.glsl  controls.cpp  main.cpp
Examples/gameplay/: .project  GameplayPolyVox-ios.plist  GameplayPolyVox-macosx.plist  GameplayPolyVox.sln  GameplayPolyVox.vcxproj  bar-descriptor.xml
GameplayPolyVox.xcodeproj/: project.pbxproj
OldCode/DownscaleWithMinimum/: DownscaleWithMinimum.sln
OldCode/HeightmapConverter/: HeightmapConverter.sln
Tools/ConvertToImageSlices/: CMakeLists.txt  ConvertToImageSlices.vcxproj  main.cpp
Tools/ConvertToVDB/: CMakeLists.txt  CmdOption.cpp  ConvertToVDB.vcxproj  ImportHeightmap.cpp  ImportHeightmap.h  ImportImageSlices.cpp  ImportMagicaVoxel.cpp  ImportMagicaVoxel.h  ImportVXL.cpp  ImportVXL.h  main.cpp  main.h
Tools/FractalGenerator/: FractalGenerator.sln
Tools/HeightmapConverter/: HeightmapConverter.sln
Tools/ProcessVDB/: CMakeLists.txt  CmdOption.cpp  CmdOption.h  Exceptions.h  Export.cpp  Export.h  ExportImageSlices.cpp  ExportImageSlices.h  HeaderOnlyLibs.cpp  HeaderOnlyLibs.h  Import.cpp  Import.h  ImportHeightmap.cpp  ImportHeightmap.h  ImportImageSlices.cpp  ImportImageSlices.h  ImportMagicaVoxel.cpp  ImportMagicaVoxel.h  ImportVXL.cpp  ImportVXL.h  main.cpp  main.h
Wrappers/C/: CMakeLists.txt  CubiquityC.cpp  CubiquityC.h  CubiquityC.vcxproj  CubiquityC.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp
Wrappers/CubiquityCTest/: CubiquityCTest.cpp  CubiquityCTest.vcxproj  stdafx.cpp
android/: AndroidManifest.xml  build.xml
android/jni/: Android.mk
bridges/gameplay/: CreateLuaBindings.bat  GameplayVolumeSerialisation.h
res/: Icosphere3.gpb  Icosphere3.material  PolyVox.frag  PolyVox.material  PolyVox.vert  SmoothTerrain.frag  SmoothTerrain.material  SmoothTerrain.vert  SolidColour.frag  SolidColour.vert  White.material  editor.form  level2.vol  level2MultiMaterial8Bit.vol
src/: Colour.cpp  Colour.h  ColouredCubesIsQuadNeeded.h  ColouredCubesVolume.cpp  ColouredCubesVolume.h  CubiquityUtility.cpp  CubiquityUtility.h  ExtraNodeData.cpp  ExtraNodeData.h  GameplayColouredCubesVolume.cpp  GameplayColouredCubesVolume.h  GameplayIsQuadNeeded.h  GameplayMarchingCubesController.h  GameplayRaycasting.cpp  GameplaySmoothTerrainVolume.cpp  GameplaySmoothTerrainVolume.h  GameplaySmoothTerrainVolumeEditor.cpp  GameplaySmoothTerrainVolumeEditor.h  GameplayVolume.h  Main.cpp  Main.h  MarchingCubesTables.cpp  MeshDecimator.cpp  MultiMaterial.cpp  MultiMaterial.h  MultiMaterialMarchingCubesController.h  OctreeNode.cpp  OctreeNode.h  RandomUnitVectors.cpp  RandomVectors.cpp  Raycasting.h  SmoothTerrainVolume.cpp  SmoothTerrainVolume.h  SmoothTerrainVolumeEditor.cpp  SmoothTerrainVolumeEditor.h  Utility.cpp  VertexTypes.cpp  Volume.cpp  Volume.h  Volume.inl  (+4 more)
src/PolyVoxCore/: AStarPathfinder.h  AmbientOcclusionCalculator.h  Array.h  ArraySizes.h  CubicSurfaceExtractor.h  CubicSurfaceExtractor.inl  CubicSurfaceExtractorWithNormals.h  CubicSurfaceExtractorWithNormals.inl  Density.h  LargeVolume.h  Log.h  MarchingCubesSurfaceExtractor.h  MarchingCubesSurfaceExtractor.inl  Material.h  RawVolume.h  (+19 more)
(+330 files in other folders)
